# wasi-http-demos

./: .gitignore  Cargo.toml  README.md  build.sh  generate-jaq.sh  jaq.sh
.github/workflows/: ci.yaml
hmac-auth/: Cargo.toml
hmac-auth/sign/src/: main.rs
hmac-auth/src/: main.rs
hmac-sign/: Cargo.toml
hmac-sign/src/: main.rs
jaq/: Cargo.toml
jaq/src/: main.rs
src/: main.rs
weather/: Cargo.toml
weather/src/: main.rs
