[package]
name = "jaq-http"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
jaq-core = "2.2.0"
jaq-json = { version = "1.1.2", features = ["serde_json"] }
jaq-std = "2.1.1"
hifijson = "*"
serde_json = "1.0.140"
wstd = "0.5.3"
component-init = { git = "https://github.com/dicej/component-init" }
